maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:16: error: ';' expected but 'else' found.
  else{
  ^